--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "dependencies": {
     "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "dat.gui": "^0.7.7",
+    "framer-motion": "^5.5.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-location": "^3.3.0",
+    "react-location-devtools": "^3.3.0",
+    "three": "^0.136.0"
   }
 }
